# emulition

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  config.toml
res/: config.toml
setup/: lxdream.deb  ubuntu.sh
src/: cursor.rs  doperoms.rs  emulator.rs  font.rs  main.rs  rom.rs  texture.rs
