[package]
name = "emulition"
description = "A coalition of emulators"
repository = "https://github.com/jackpot51/emulition"
version = "0.0.1"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "emulition"
path = "src/main.rs"

[dependencies]
env_logger = "0.6.0"
log = "0.4.6"
reqwest = "0.9.9"
rustc-serialize = "0.3.24"
sdl2 = "0.9"
sdl2_image = "0.3"
sdl2_ttf = "0.9"
toml = "0.1"
url = "1.7.2"
